--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		]
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"formik": "^2.4.6",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
